--- a/wdd230-final-project/css/small.css
+++ b/wdd230-final-project/css/small.css
@@ -368,7 +368,7 @@ footer hr {
 }
 
 .templeSection {
-    background-color: #988B6D;
+    background-color: #624C40;
     display: flex;
     flex-direction: column;
     margin: 10px;
@@ -388,7 +388,7 @@ footer hr {
     padding: 10px;
     margin: 15px;
     border-radius: 10px;
-    background-color: #624C40;
+    background-color: #484041;
 }
 
 .templeSection section {
